# event_horizon

./: .clangd  .gitignore  .gitmodules  3  7  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: FindMbedTLS.cmake
event_horizon/: __package__.jsr  async.jsr  consts.jsr  dns.jsr  errors.jsr  event_loop.jsr  future.jsr  handle.jsr  idle.jsr  listener.jsr  pipe.jsr  promise.jsr  queue.jsr  registry.jsr  stream.jsr  task.jsr  tcp.jsr  timer.jsr  timers.jsr  tls.jsr  udp.jsr
event_horizon/data_structures/: deque.jsr  registry.jsr
event_horizon/utils/: abc.jsr  ip.jsr
event_horizon/uv/: __package__.jsr  consts.jsr  dns.jsr  errors.jsr  event_loop.jsr  handle.jsr  idle.jsr  pipe.jsr  prepare.jsr  stream.jsr  stream_buffer.jsr  tcp.jsr  timer.jsr  tls.jsr  udp.jsr
examples/: echo_client.jsr  echo_server.jsr  http-get.jsr  https-get.jsr  sleep.jsr  tcp_echo.jsr  tcp_echo_client.jsr  tcp_echo_server.jsr  tcp_stress_echo_server.jsr  tls_chat_server.jsr  tls_echo.jsr  udp_echo.jsr  udp_echo_client.jsr  udp_echo_server.jsr  udp_stress_echo_server.jsr
examples/async-await/: async.jsr  async_echo_client.jsr  async_tcp.jsr  async_test.jsr  async_udp.jsr  sleep.jsr  tcp_echo_client.jsr  tcp_echo_server.jsr  tcp_stress_echo_server.jsr  udp_echo_client.jsr  udp_echo_server.jsr  udp_stress_echo_server.jsr
examples/callbacks/: echo_client.jsr  echo_server.jsr
src/: CMakeLists.txt  callbacks.c  callbacks.h  consts.c  consts.h  dns.c  dns.h  errors.c  errors.h  event_horizon.c  event_horizon.h  event_loop.c  event_loop.h  handle.c  handle.h  idle.c  idle.h  pipe.c  pipe.h  prepare.c  prepare.h  ring_buffer.c  ring_buffer.h  sock_utils.c  sock_utils.h  stream.c  stream.h  stream_buffer.c  stream_buffer.h  tcp.c  tcp.h  timer.c  timer.h  tls.c  tls.h  udp.c  udp.h
tests/: dns.jsr  handle.jsr  idle.jsr  loop.jsr  run.jsr  server_utils.jsr  stream.jsr  tcp.jsr  test.jsr  timer.jsr  udp.jsr
tests/async/: async.jsr  async_echo_client.jsr  async_echo_server.jsr  async_tcp.jsr  async_test.jsr  async_udp.jsr  promise.jsr  promise.jsr.bak  udp_echo_client.jsr  udp_echo_server.jsr
tests/certs/: .gitignore  cert.pem
tests/data_structures/: deque.jsr  stream_buffer.jsr
tests/evh/: dns.jsr  future_task.jsr  pipe.jsr  promise.jsr  queue.jsr  sleep.jsr  tcp.jsr  timers.jsr  tls.jsr  udp.jsr
tests/utils/: ip.jsr
tests/uv/: call_soon.jsr  dns.jsr  handle.jsr  idle.jsr  loop.jsr  microtask.jsr  pipe.jsr  prepare.jsr  stream.jsr  tcp.jsr  timer.jsr  tls.jsr  udp.jsr
